fix: - InMemoryLeadRepository.add() — дубликат теперь тихо игнорируется - InMemoryLeadRepositoryTest.shouldNotAddDublicateEntityWhenAddCalled — проверяет findAll().hasSize(1) вместо ожидания исключения - Удалён неиспользуемый import assertThatThrownBy